# rapidtar

./: .gitignore  Cargo.toml
librapidarchive/: Cargo.toml
librapidarchive/src/: blocking.rs  concurrentbuf.rs  lib.rs  normalize.rs  spanning.rs  traverse.rs  tuning.rs
librapidarchive/src/changer/: mod.rs
librapidarchive/src/fs/: mod.rs  portable.rs  unix.rs  windows.rs
librapidarchive/src/tape/: mod.rs  unix.rs  windows.rs
librapidarchive/src/tar/: gnu.rs  header.rs  label.rs  mod.rs  pax.rs  recovery.rs  ustar.rs
librapidarchive/src/units/: data.rs  time.rs
rapidtar/: Cargo.toml
src/: endpoint_mt.rs  endpoint_tar.rs  lib.rs  main.rs
src/rapidtar/: blocking.rs  concurrentbuf.rs  mod.rs  normalize.rs  result.rs  spanning.rs  stream.rs  traverse.rs  tuning.rs  units.rs
src/rapidtar/fs/: mod.rs  portable.rs  unix.rs  windows.rs
src/rapidtar/tape/: mod.rs  windows.rs
src/rapidtar/tar/: blocking.rs  gnu.rs  header.rs  mod.rs  pax.rs  recovery.rs  ustar.rs
src/rapidtar/units/: mod.rs  time.rs
