[package]
name = "rapidtar"
version = "0.1.0"
authors = ["David Wendt"]

[dependencies]
rayon = "1.0.3"
pad = "0.1" #omfg wtf am I doing. fucking left-pad?!
pathdiff = "0.1.0"
argparse = "0.2.2"
num = "0.2.0"
num-traits = "0.2.6"

[dev-dependencies]
rand = "0.6.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ['winbase', 'handleapi', 'winerror'] }

[lib]
name = "rapidtar"
path = "src/lib.rs"

[[bin]]
name = "rapidtar"
path = "src/endpoint_tar.rs"
doc = false

[[bin]]
name = "rapidmt"
path = "src/endpoint_mt.rs"
doc = false
